Hopefully fixed logo being too big

--- a/Website/static/css/main.css
+++ b/Website/static/css/main.css
@@ -107,10 +107,10 @@ h2 {
 
 .navbar-brand {
   background-color: #1b7b98;
-  height: 90px;
+  height: 120px;
   margin-bottom: 20px;
   position: relative;
-  width: 297px;
+  width: 300px;
 }
 
 .navbar-brand img {
